tests/toylang/neg/001689_mutation.toylang
program a = { while program a = { } . a do sleep; } .
